Fisrt paragraph was changed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    <div class="jumbotron">
        <div class="container">
            <h1 class="text-danger">WELCOME TO ACE AFRICA</h1>
-           <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis veritatis quibusdam fugit, iusto quod labore, incidunt nobis nesciunt sequi dolore sint laudantium ipsum, architecto illum nulla dignissimos asperiores laborum id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos molestias quidem omnis obcaecati molestiae similique! Maiores cupiditate dolorem et nemo ipsum, natus placeat consectetur non ut reprehenderit dolores possimus. Quam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, ratione autem exercitationem vitae sapiente iste, doloribus cum maxime vel obcaecati deleniti veritatis natus laboriosam, rem iure tenetur laudantium quod labore! </p> 
+           <p class="text-justify">Hello world this our topic is to remind you of what we heard on the news </p> 
            <a class="btn btn-success">LEARN MORE</a>
         </div>
     </div>
