The topic was changed

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
            <h1 class="text-danger">WELCOME TO ACE AFRICA</h1>
            <p class="text-justify">Hello world this our topic is to remind you of what we heard on the news </p> 
            <a class="btn btn-success">LEARN MORE</a>
+           <a class="btn btn-danger">Capitalise more</a>
         </div>
     </div>
     <div class="container py-5">
