Development of the first version

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6 bg-warning p-5">
                 <form action="" method="GET" class="Forms-controls">
-                    <h4 class="text-center">VIBRON REGISTRATION FORM</h4>
+                    <h4 class="text-center">pab form</h4>
                     <label for="name">Name</label>
                     <input type="text" class="form-control mb-2">
                     <label for="email">Email</label>
@@ -182,6 +182,11 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae officiis quas ex asperiores numquam harum rem quia. Cumque recusandae exercitationem molestiae eius, alias totam rem facilis reprehenderit esse consequuntur temporibusrecusandae exercitationem molestiae eius, alias totam rem facilis reprehenderit esse consequuntur temporibusrecusandae exercitationem molestiae eius, alias totam rem facilis reprehenderit esse consequuntur temporibusrecusandae exercitationem molestiae eius, alias totam rem facilis reprehenderit esse consequuntur temporibus.</p>
                     </div>
                 </div>
+            <div>
+                <p>
+                    Development of the first version of this application (Version.0.1)
+                </p>
+            </div>
     <script src="bootstrap/assets/js/vendor/jquery-slim.min.js"></script>
     <script src="bootstrap/dist/js/bootstrap.min.js"></script>
 
